[IOTDB-3078]upgrade spotless and code format version. Add instruction for spotles… (#5771)
* upgrade spotless and code format version. Add instruction for spotless and JDK17.

* provide two google.java.format.version to fit jdk1.8 and 11+

* downgrade google java code format to 1.7

* revert argline for jdk17

Co-authored-by: xiangdong huang <sainthxd@gmail.com>